--- a/LigaProEcuador2024/appsettings.json
+++ b/LigaProEcuador2024/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LigaProConnection": "Server=localhost;Database=LigaProDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+
 }
